Fix alignment of history sidebar height

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -200,7 +200,7 @@ body {
 }
 
 #recent-container { position: relative;
-	height: 498px;
+	height: 337px;
 	width: 15%;
 	border: 1px solid #ccc;
 	border-radius: 6px;
